--- a/spring-cloud.properties
+++ b/spring-cloud.properties
@@ -1,6 +1,6 @@
 spring.application.name=spring-cloud
 
-
+server.port=8086
 spring.datasource.url=jdbc:h2:mem:cloud
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
