--- a/spring-cloud.properties
+++ b/spring-cloud.properties
@@ -4,9 +4,20 @@ server.port=8086
 spring.datasource.url=jdbc:h2:mem:cloud
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
-spring.h2.console.enabled=true
 
-spring.cloud.config.enabled=false
-eureka.client.enabled=false
-mes-configs.limit-de-produits=4
+spring.h2.console.enabled=true
+eureka.client.serviceUrl.defaultZone=http://localhost:9102/eureka/
+management.endpoints.web.expose=info, health, refresh
+
+spring.config.import=optional:configserver:http://localhost:9102
+spring.cloud.config.enabled=true
+spring.cloud.config.uri=http://localhost:9102
+
+
+
+mes-configs.limit-de-produits=2
+
+
+
+spring.cloud.config.import-check.enabled=false
 
